--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,152 @@
-asgiref==3.8.1
+annotated-types==0.7.0
+anyio==4.9.0
+argcomplete==3.5.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==24.1.0
+autocommand==2.2.2
+babel==2.17.0
+beautifulsoup4==4.13.3
+better_exceptions==0.3.3
 bidict==0.23.1
-blinker==1.9.0
+bleach==6.2.0
+blinker==1.8.2
+btrfsutil==6.14
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
-dnspython==2.7.0
-evdev==1.9.1
-greenlet==3.2.2
-h11==0.14.0
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.2
+cryptography==45.0.3
+cycler==0.12.1
+dbus-python==1.4.0
+decorator==5.2.1
+defusedxml==0.7.1
+dulwich==0.22.8
+evdev==1.9.0
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.18.0
+Flask==3.1.1
+fonttools==4.58.2
+gaphas==5.0.3
+gaphor==3.0.0
+generic==1.1.4
+Glances==4.3.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+importlib_metadata==8.7.0
+ipykernel==6.29.5
+ipython==9.3.0
+ipython_pygments_lexers==1.1.1
 itsdangerous==2.2.0
+jaraco.collections==5.1.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jaraco.text==4.0.0
+jedi==0.19.2
 Jinja2==3.1.6
-keyboard==0.13.5
+joblib==1.4.2
+json5==0.12.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-events==0.12.0
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyter_server==2.16.0
+jupyterlab==4.4.3
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+keyboard==0.13.4
+kiwisolver==1.4.6
+lit==19.1.7.dev0
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-netifaces==0.10.6
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mercurial==7.0.2
+mistune==3.1.3
+more-itertools==10.7.0
+msgpack==1.0.5
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest_asyncio==1.6.0
+nftables==0.1
+notebook_shim==0.2.4
+numpy==2.2.6
+orjson==3.10.18
+overrides==7.7.0
+packaging==25.0
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.2.1
+platformdirs==4.3.6
+pooch==1.8.2
+prometheus_client==0.22.0
+prompt_toolkit==3.0.51
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycairo==1.28.0
+pycparser==2.22
+pydantic==2.11.5
+pydantic_core==2.33.2
+pydot==3.0.1
+Pygments==2.19.1
+PyGObject==3.52.3
 pynput==1.8.1
-python-engineio==4.12.0
+pyparsing==3.2.3
+python-dateutil==2.9.0
+python-engineio==4.12.1
+python-json-logger==3.3.0
 python-socketio==5.13.0
 python-xlib==0.33
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq==26.2.0
+QTermWidget==2.2.0
+referencing==0.35.1
+Reflector==2023.6.28.0.36.1
 requests==2.32.3
+rich==14.0.0
+rpds-py==0.22.3
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
 scapy==2.6.1
-setuptools==3.3
+scikit-learn==1.7.0
+scipy==1.15.3
+seaborn==0.13.2
+Send2Trash==1.8.3
+setuptools==80.9.0
 simple-websocket==1.1.0
 six==1.17.0
+smbus==1.1
+sniffio==1.3.1
+soupsieve==2.6
+stack_data==0.6.3
+TBB==0.2
+threadpoolctl==3.5.0
+tinycss2==1.4.0
+tornado==6.4.2
+traitlets==5.14.3
+typing-inspection==0.4.1
+typing_extensions==4.13.2
 urllib3==2.4.0
+wcwidth==0.2.13
+webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
+wheel==0.45.1
 wsproto==1.2.0
+yt-dlp==2025.5.22
+zipp==3.21.0
